[project]
name = "gnocpush"
version = "0.1.0"
dependencies = [
  "flake8-pyproject",
  "flask",
  "globalnoc_alertmon_agent==1.0.1",
  "prometheus-flask-exporter==0.23.0",
  "pytest",
  "python-dateutil",
  "requests",
  "waitress",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
gnocpush = "gnocpush.cli.gnocpush:main"
gnocscrape = "gnocpush.cli.gnocscrape:main"

[tool.flake8]
ignore = ["E221", "E251"]

[tool.setuptools.packages.find]
exclude = ["charts"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-q",
    "--import-mode=importlib",
]
testpaths = [
  "tests",
]
markers = [
  "sanitize_severity",
  "alertmanager_to_gnoc",
]
